--- a/html5demo/wanhuatong.html
+++ b/html5demo/wanhuatong.html
@@ -29,7 +29,7 @@
                 var len  = arr.length;
                 for(var i=0;i<len;i++) {
                     if(arr[i].num<=0) {
-                        arr.split(i,1);
+                        arr.splice(i,1);
                         continue;
                     }
                     arr[i].angle+=2;
