--- a/html5demo/lianliankan.html
+++ b/html5demo/lianliankan.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -97,5 +97,6 @@
 </head>
 <body>
 <canvas id="canvas"  width="500" height="500"></canvas>
+´ó¼ÒºÃ
 </body>
 </html>
