--- a/html5demo/llkan.html
+++ b/html5demo/llkan.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>简单连连看</title>
+    <title>simple lianliankan</title>
     <script src="event.js"></script>
     <script>
         window.onload  = function() {
