addEventLinstener出现this的问题

--- a/360star/index.html
+++ b/360star/index.html
@@ -28,6 +28,7 @@
 			<span class="item"></span>
 		</div>
 	</div>
+	<canvas id="canvas"></canvas>
 	<div class="msg" id="msg">
 		请设置密码
 	</div>
@@ -43,6 +44,7 @@
 
 <script src="./src/js/Class.js"></script>
 <script src="./src/js/event.js"></script>
+<script src="./src/js/line.js"></script>
 <script src="./src/js/main.js"></script>
 </body>
 </html>
