完成 滑动方法

--- a/360star/index.html
+++ b/360star/index.html
@@ -11,6 +11,7 @@
 <body>
 <div class="box">
 	<h1 class="title border-1px">手势密码</h1>
+	<canvas id="canvas" width="javascript:window.innerWidth" height="300"></canvas>
 	<div class="gesture-pwd" id="gesPWD">
 		<div class="column">
 			<span class="item"></span>
@@ -28,7 +29,6 @@
 			<span class="item"></span>
 		</div>
 	</div>
-	<canvas id="canvas"></canvas>
 	<div class="msg" id="msg">
 		请设置密码
 	</div>
