功能已经基本完成

--- a/360star/index.html
+++ b/360star/index.html
@@ -45,6 +45,7 @@
 <script src="./src/js/Class.js"></script>
 <script src="./src/js/event.js"></script>
 <script src="./src/js/line.js"></script>
+<script src="./src/js/storage.js"></script>
 <script src="./src/js/main.js"></script>
 </body>
 </html>
