--- a/360star/index.html
+++ b/360star/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="box">
 	<h1 class="title border-1px">手势密码</h1>
-	<canvas id="canvas" width="javascript:window.innerWidth" height="300"></canvas>
+	<canvas id="canvas" width="380" height="300"></canvas>
 	<div class="gesture-pwd" id="gesPWD">
 		<div class="column">
 			<span class="item"></span>
