准备开始重构

--- a/360star/index.html
+++ b/360star/index.html
@@ -34,18 +34,21 @@
 	</div>
 	<div class="about-pwd" id="aboutPWD">
 		<label for="set-pwd" class="set-pwd">
+			<span id="set-pwd-btn"></span>
 			<input name="pwd" id="set-pwd" type="radio" checked> 设置密码
 		</label>
 		<label for="check-pwd" class="check-pwd">
+			<span id="check-pwd-btn active"></span>
 			<input name="pwd" id="check-pwd" type="radio"> 验证密码 
 		</label>
 	</div>
 </div>
 
-<script src="./src/js/Class.js"></script>
+<!-- <script src="./src/js/Class.js"></script>
+<script src="./src/js/promise.js"></script>
 <script src="./src/js/event.js"></script>
 <script src="./src/js/line.js"></script>
-<script src="./src/js/storage.js"></script>
-<script src="./src/js/main.js"></script>
+<script src="./src/js/storage.js"></script> -->
+<script src="./src/js/tmpmain.js"></script>
 </body>
 </html>
