基本完成所有的人模

--- a/360star/index.html
+++ b/360star/index.html
@@ -9,9 +9,9 @@
 	<link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-<div class="box">
-	<h1 class="title border-1px">手势密码</h1>
-	<canvas id="canvas" width="380" height="300"></canvas>
+<div class="box" data-unloack>
+	<h1 class="title">手势密码</h1>
+	<canvas id="canvas"></canvas>
 	<div class="gesture-pwd" id="gesPWD">
 		<div class="column">
 			<span class="item"></span>
@@ -43,12 +43,6 @@
 		</label>
 	</div>
 </div>
-
-<!-- <script src="./src/js/Class.js"></script>
-<script src="./src/js/promise.js"></script>
-<script src="./src/js/event.js"></script>
-<script src="./src/js/line.js"></script>
-<script src="./src/js/storage.js"></script> -->
 <script src="./src/js/tmpmain.js"></script>
 </body>
 </html>
