书写文字描述

--- a/360star/index.html
+++ b/360star/index.html
@@ -43,6 +43,6 @@
 		</label>
 	</div>
 </div>
-<script src="./src/js/tmpmain.js"></script>
+<script src="./src/js/main.js"></script>
 </body>
 </html>
